Add multi-page map example

--- a/mfp.html
+++ b/mfp.html
@@ -270,6 +270,25 @@ templates:
           <img class="fragment" src="img/driving-directions.png" style="width: 300px; ">
         </section>
         <section>
+          <h1 class="beefy">Multi-page maps</h1>
+          <div style="height: 500px; position: relative;">
+            <img class="fragment" src="img/map_page_full.png"
+              style="height:400px; position: absolute; left: 0px; top: 0px; border: 1px solid black;">
+            <img class="fragment" src="img/map_page_1.png"
+              style="height:400px; position: absolute; left: 10px; top: 10px; border: 1px solid black;">
+            <img class="fragment" src="img/map_page_2.png"
+              style="height:400px; position: absolute; left: 20px; top: 20px; border: 1px solid black;">
+            <img class="fragment" src="img/map_page_3.png"
+              style="height:400px; position: absolute; left: 30px; top: 30px; border: 1px solid black;">
+            <img class="fragment" src="img/map_page_4.png"
+              style="height:400px; position: absolute; left: 40px; top: 40px; border: 1px solid black;">
+            <img class="fragment" src="img/map_page_5.png"
+              style="height:400px; position: absolute; left: 50px; top: 50px; border: 1px solid black;">
+            <img class="fragment" src="img/map_page_6.png"
+              style="height:400px; position: absolute; left: 60px; top: 60px; border: 1px solid black;">
+          </div>
+        </section>
+        <section>
           <h1 class="beefy">Charts</h1>
           <img src="img/charts.png" style="width: 800px; ">
         </section>
