--- a/mfp.html
+++ b/mfp.html
@@ -99,7 +99,11 @@
         </section>
         <section>
           <h1 class="beefy">Camptocamp</h1>
-          <img src="img/c2c.png" style="opacity: 0.5; width: 100%; ">
+          <div style="position: relative;">
+            <img src="img/c2c.png" style="opacity: 0.5; width: 100%; ">
+            <img class="fragment" src="img/hiring.png" 
+              style="position: absolute; top: 30px; right: 30px;">
+          </div>
         </section>
         <section>
           <h1 class="beefy">MapFish Print?</h1>
